--- a/WebAutopark.BusinessLogic/WebAutopark.BusinessLogic.csproj
+++ b/WebAutopark.BusinessLogic/WebAutopark.BusinessLogic.csproj
@@ -1,12 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="DapperExtensions" Version="1.7.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebAutopark.Core\WebAutopark.Core.csproj" />
