--- a/WebAutopark/appsettings.json
+++ b/WebAutopark/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DevelopmentDB": "Server=DESKTOP-C1UO849\\SQLEXPRESS;Initial Catalog=WebAutopark;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
+  },
   "AllowedHosts": "*"
 }
