--- a/WebAutopark.BusinessLogic/WebAutopark.BusinessLogic.csproj
+++ b/WebAutopark.BusinessLogic/WebAutopark.BusinessLogic.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\WebAutopark.Core\WebAutopark.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
