--- a/WebAutopark.Core/WebAutopark.Core.csproj
+++ b/WebAutopark.Core/WebAutopark.Core.csproj
@@ -11,4 +11,8 @@
     <None Remove="DevIncubator.WebAutopark\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extension\" />
+  </ItemGroup>
+
 </Project>
