--- a/WebAutopark/WebAutopark.csproj
+++ b/WebAutopark/WebAutopark.csproj
@@ -1,13 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="WebAutopark.Core\**" />
+      <Content Remove="WebAutopark.Core\**" />
+      <EmbeddedResource Remove="WebAutopark.Core\**" />
+      <None Remove="WebAutopark.Core\**" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Content Remove="wwwroot\lib\jquery-validation\LICENSE.md" />
       <Content Remove="wwwroot\lib\jquery-validation-unobtrusive\LICENSE.txt" />
       <Content Remove="wwwroot\lib\bootstrap\LICENSE" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.6.21352.12" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WebAutopark.BusinessLogic\WebAutopark.BusinessLogic.csproj" />
+      <ProjectReference Include="..\WebAutopark.Core\WebAutopark.Core.csproj" />
+      <ProjectReference Include="..\WebAutopark.DataAccess\WebAutopark.DataAccess.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Pages\Vehicle\" />
     </ItemGroup>
 
 </Project>
