Create Get.cshtml, Index.cshtml, Update.cshtml, Delete.cshtml, Create.cshtml razer pages Updated repositories return id renamed file style.css, main.js Added controllers DetailController.cs, VehicleTypeController.cs

--- a/WebAutopark/WebAutopark.csproj
+++ b/WebAutopark/WebAutopark.csproj
@@ -28,7 +28,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Pages\Vehicle\" />
+      <_ContentIncludedByDefault Remove="Views\Pages\Vehicle\GetVehicleById.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Pages\Vehicle\GetVehicles.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\VehicleType\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\VehicleType\Index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Pages" />
     </ItemGroup>
 
 </Project>
