Made the specification into a separate project

--- a/WebAutopark.DataAccess/WebAutopark.DataAccess.csproj
+++ b/WebAutopark.DataAccess/WebAutopark.DataAccess.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dapper.Specification\Dapper.Specification.csproj" />
     <ProjectReference Include="..\WebAutopark.Core\WebAutopark.Core.csproj" />
   </ItemGroup>
 
