Updated repositories, Added in DI extend interface

--- a/WebAutopark.DataAccess/WebAutopark.DataAccess.csproj
+++ b/WebAutopark.DataAccess/WebAutopark.DataAccess.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebAutopark.BusinessLogic\WebAutopark.BusinessLogic.csproj" />
     <ProjectReference Include="..\WebAutopark.Core\WebAutopark.Core.csproj" />
   </ItemGroup>
 
